test/library/standard/LinkedLists/deitz/aseq/test_aseq2-error.chpl
var i: uint;
for j in 1..10 do
  i = i + j;
writeln(i);
